@@ -1,3 +1,9 @@
+2012-08-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/examples/eigen/cmake/CMakeLists.txt: Added a second patch by
+	Peter to support compilation on Windows
+	* inst/examples/armadillo/cmake/CMakeLists.txt: idem
+
 2012-08-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/examples/eigen/cmake/CMakeLists.txt: Added Peter's patch
